apache/apache-php5.3/kubernetes/istio/example-istio-ServiceEntry.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysqldb-se
spec:
  hosts:
  - mysqldb
  location: MESH_INTERNAL
  ports:
  - number: 3306
    name: mysql
    protocol: mysql
  resolution: STATIC
  endpoints:
  - address: 124.**.65.221
---
